--- a/services/buildspec.yml
+++ b/services/buildspec.yml
@@ -1,6 +1,29 @@
 version: 0.2
 
 phases:
+  install:
+      runtime-versions:
+        # Especifica a versão do Docker para garantir consistência
+        docker: 20
+      commands:
+        # Paramos o serviço Docker que o CodeBuild inicia por padrão
+        - echo "Stopping the default Docker daemon..."
+        - systemctl stop docker
+  
+        # Criamos o diretório de configuração, caso não exista
+        - mkdir -p /etc/docker
+        
+        # Criamos o arquivo de configuração para forçar o uso do DNS da VPC
+        - echo "Creating Docker daemon configuration file..."
+        - |
+          echo '{"dns": ["10.0.0.2", "169.254.169.253"]}' > /etc/docker/daemon.json
+  
+        # Reiniciamos o serviço Docker para que ele leia a nova configuração
+        - echo "Starting Docker daemon with new DNS configuration..."
+        - systemctl start docker
+        - echo "Verifying Docker daemon is running..."
+        - docker info
+
   pre_build:
     commands:
     
