--- a/services/buildspec.yml
+++ b/services/buildspec.yml
@@ -5,6 +5,7 @@ phases:
   pre_build:
     commands:
       - echo "Logging in to Amazon ECR via NAT Gateway..."
+      - echo $AWS_DEFAULT_REGION
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION
       
   build:
