--- a/services/buildspec.yml
+++ b/services/buildspec.yml
@@ -5,8 +5,7 @@ phases:
   pre_build:
     commands:
       - echo "Logging in to Amazon ECR via NAT Gateway..."
-      - echo $AWS_DEFAULT_REGION
-      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION
+      - aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin $ACCOUNT_ID.dkr.ecr.us-east-2
       
   build:
     commands:
