--- a/services/buildspec.yml
+++ b/services/buildspec.yml
@@ -6,7 +6,7 @@ phases:
       - echo "Logging in to Amazon ECR via NAT Gateway..."
       - ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
       - aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin $ACCOUNT_ID.dkr.ecr.us-east-2.amazonaws.com
-      - REPOSITORY_URI=$ACCOUNT_ID.dkr.ecr.us-east-2.amazonaws.com/busca-avancada-prd
+      - REPOSITORY_URI=$ACCOUNT_ID.dkr.ecr.us-east-2.amazonaws.com/busca_teste
       - IMAGE_TAG=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
 
   build:
